@@ -149,7 +149,7 @@ int32_t SPVM_RUNTIME_call_sub_vm(SPVM_ENV* env, int32_t sub_id, SPVM_VALUE* args
   // Subroutine stack
   // This is used Variables, mortal stack
   int32_t call_frame_length = sub->op_mys->length + 1 + sub->mortal_stack_max;
-  SPVM_VALUE* call_frame = SPVM_UTIL_ALLOCATOR_safe_malloc_zero(sizeof(SPVM_VALUE) * call_frame_length);
+  SPVM_VALUE* call_frame = SPVM_RUNTIME_ALLOCATOR_alloc(runtime, sizeof(SPVM_VALUE) * call_frame_length);
   
   // Variables
   SPVM_VALUE* vars = call_frame;
@@ -1893,7 +1893,7 @@ int32_t SPVM_RUNTIME_call_sub_vm(SPVM_ENV* env, int32_t sub_id, SPVM_VALUE* args
     env->set_exception(env, NULL);
   }
   
-  free(call_frame);
+  SPVM_RUNTIME_ALLOCATOR_free(runtime, call_frame);
   
   return exception_flag;
 }
